--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mon site gratuit</title>
+  <title>Bilingual High School of Bekoko</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      margin: 0;
+      background-color: #f4f6f8;
+      color: #333;
+    }
+    header {
+      background-color: #003366;
+      color: white;
+      padding: 25px;
+      text-align: center;
+    }
+    nav {
+      background-color: #0055a5;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 1000px;
+      margin: auto;
+      padding: 30px;
+      background: white;
+    }
+    footer {
+      background-color: #003366;
+      color: white;
+      text-align: center;
+      padding: 15px;
+      margin-top: 30px;
+    }
+  </style>
 </head>
 <body>
-  <h1>Bienvenue</h1>
-  <p>Ce site est hébergé gratuitement avec GitHub Pages.</p>
+
+<header>
+  <h1>Bilingual High School of Bekoko</h1>
+  <p>Secondary Education Institution</p>
+</header>
+
+<nav>
+  <a href="#">Home</a>
+  <a href="#">About</a>
+  <a href="#">Programs</a>
+  <a href="#">Administration</a>
+  <a href="#">Contact</a>
+</nav>
+
+<main>
+  <h2>Welcome</h2>
+  <p>
+    The Bilingual High School of Bekoko is a secondary education institution
+    committed to academic excellence, bilingual education, and student success
+    in a disciplined and inclusive environment.
+  </p>
+
+  <h3>Our Mission</h3>
+  <p>
+    To educate responsible, competent, and open-minded students capable of
+    pursuing higher education and contributing positively to society.
+  </p>
+</main>
+
+<footer>
+  <p>© 2026 – Bilingual High School of Bekoko</p>
+  <p>Email: lycee.bekoko.info@gmail.com</p>
+</footer>
+
 </body>
 </html>
