--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Bilingual High School of Bekoko</title>
+  <title>LYCEE BILINGUE DE BEKOKO / GBHS Bekoko</title>
   <style>
     body {
       font-family: Arial, Helvetica, sans-serif;
@@ -48,8 +48,8 @@
 <body>
 
 <header>
-  <h1>Bilingual High School of Bekoko</h1>
-  <p>Secondary Education Institution</p>
+  <h1>Government Bilingual High School of Bekoko</h1>
+  <p>Lycee bilingue Bekoko</p>
 </header>
 
 <nav>
@@ -61,11 +61,9 @@
 </nav>
 
 <main>
-  <h2>Welcome</h2>
+  <h2>Bienvenue/ Welcome</h2>
   <p>
-    The Bilingual High School of Bekoko is a secondary education institution
-    committed to academic excellence, bilingual education, and student success
-    in a disciplined and inclusive environment.
+    Établissement d'enseignement général à régime d'externat avec un sous-système anglophone et un sous-système francophone.
   </p>
 
   <h3>Our Mission</h3>
