--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 </main>
 
 <footer>
-  <p>© 2026 – Bilingual High School of Bekoko</p>
-  <p>Email: lycee.bekoko.info@gmail.com</p>
+  <p>© 2024 – GBHS/ LB - Bekoko</p>
+  <p>Email: lyceebilinguebekoko@outlook.com</p>
 </footer>
 
 </body>
